--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,12 @@
   }
 }
 
+* {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
